radioterio: disable rtmp encoder

--- a/k8s/casa/apps/radioterio/kustomization.yaml
+++ b/k8s/casa/apps/radioterio/kustomization.yaml
@@ -21,4 +21,4 @@ resources:
   - frontend-service.yaml
   - frontend-ingressroute.yaml
 
-  - ted-irens-rtmp-encoder.yaml
+#  - ted-irens-rtmp-encoder.yaml
