radioterio: add redis

--- a/k8s/casa/apps/radioterio/kustomization.yaml
+++ b/k8s/casa/apps/radioterio/kustomization.yaml
@@ -7,6 +7,10 @@ metadata:
 resources:
   - ns.yaml
 
+  - redis-deployment.yaml
+  - redis-pvc.yaml
+  - redis-service.yaml
+
   - api-server-deployment.yaml
   - api-server-externalsecret.yaml
   - api-server-ingressroute.yaml
