add explainit app

--- a/k8s/casa/bootstrap/apps/explainit.yaml
+++ b/k8s/casa/bootstrap/apps/explainit.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/pyldin601/explainit.git'
+    repoURL: 'git@github.com:pyldin601/explainit.git'
     path: kustomize
     targetRevision: HEAD
   destination:
